scripts/10_platform/keybuzz-api-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: keybuzz-api
  namespace: keybuzz
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: platform-api
    component: backend
